Using Buzz/Client/Curl client instead of Buzz/Client/FileGetContents.
Buzz/Client/FileGetContents has problems with SSL requests which we use in here.

I set the curl timeout to 10secs, sometimes the conversion time can get more time than default 5secs timeout.

New parameter is added to convert method named jsonOnly which returns only swiffy json data instead of whole html.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "iborodikhin/php-swiffy",
     "description": "Google's swiffy convert in php",
+    "minimum-stability" : "dev",
     "type": "library",
     "authors": [
         {
